[tool.poetry]
authors = ["long2ice <long2ice@gmail.com>"]
description = "A fast asyncio MySQL driver"
documentation = "https://github.com/long2ice/asyncmy"
homepage = "https://github.com/long2ice/asyncmy"
include = ["CHANGELOG.md", "LICENSE", "README.md"]
keywords = ["driver", "asyncio", "mysql"]
license = "Apache-2.0"
name = "asyncmy"
packages = [
    { include = "asyncmy" },
]
readme = "README.md"
repository = "https://github.com/long2ice/asyncmy.git"
version = "0.2.8-rc1"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.group.dev.dependencies]
bandit = "*"
black = "*"
cython = "*"
flake8 = "*"
isort = "*"
mypy = "*"
rich = "*"
ruff = "*"

[tool.poetry.group.test.dependencies]
pytest = "*"
mysqlclient = "*"
pymysql = "0.8.1"
aiomysql = "*"
pytest-asyncio = "*"
pytest-mock = "*"
pytest-xdist = "*"
cryptography = "*"
uvloop = { version = "*", markers = "sys_platform != 'win32'" }

[tool.poetry.build]
generate-setup-file = true
script = "build.py"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core", "setuptools", "cython"]

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.pytest.ini_options]
asyncio_mode = 'auto'

[tool.mypy]
pretty = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
